feat: 新增绘本岛项目基础架构和页面组件
refactor: 优化数组遍历和创建的相关示例代码

docs: 更新README文档，添加项目介绍和功能说明

style: 调整CSS变量和定位相关示例代码格式

test: 添加HTML/CSS渲染流程示例页面

chore: 更新Python工具脚本和Jupyter笔记本示例

--- a/js/promise/4.html
+++ b/js/promise/4.html
@@ -13,7 +13,7 @@
     <script>
         //异步变同步，让 then 里的回调函数 等 fetch 拿到数据后再执行
         fetch('https://api.github.com/orgs/lemoncode/members')
-        .then(data => data.json())
+        .then(data => data.json()) // 解析 HTTP 响应内容为 JSON 格式的方法
         .then(res => {
             console.log(res);
             document.getElementById("members").innerHTML = 
@@ -21,7 +21,7 @@
         })
 
 
-        // console.log(fetch('https://api.github.com/orgs/lemoncode/members'));
+        console.log(fetch('https://api.github.com/orgs/lemoncode/members')); // Promise对象
     </script>
 </body>
 </html>
