--- a/batjtmd/shouxie/getJSON/2.html
+++ b/batjtmd/shouxie/getJSON/2.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        function getJSON(url){
-
+        const getJSON = (url) => {
+            // 返回promise实例，promise类里定义了then方法
+            return new Promise((resolve, reject) => {
+                // executor 执行器函数，同步执行
+                // 将耗时的异步任务放在 executor 中执行
+                // 异步任务执行成功，调用 resolve 方法，将结果传递给 then 方法
+                // 异步任务执行失败，调用 reject 方法，将错误信息传递给 catch 方法
+                const xhr = new XMLHttpRequest();
+                xhr.open('GET', url, true);
+                xhr.send();
+                xhr.onreadystatechange = function () {
+                    // 首先检查 readyState === 4 （请求完成）
+                    if (xhr.readyState === 4) {
+                        // HTTP错误状态码（如404、500等）不会触发onerror事件 ，它们仍然会完成请求并返回响应，只是状态码不是200。
+                        if (xhr.status === 200) {
+                            const data = JSON.parse(xhr.responseText);
+                            resolve(data);
+                        } else {
+                            // 处理HTTP错误状态码
+                            reject(`HTTP错误: ${xhr.status}`);
+                        }
+                    }
+                    // onerror 只能捕获网络错误，不能捕获 HTTP 错误
+                    xhr.onerror = function () {
+                        reject('网络错误');
+                    }
+                }
+                });
         }
-
-        getJSON
-          .then
+        // promise 是es6提供的异步编程解决方案，优于回调函数
+        // 实现 promise 实例里的 then 方法
+        getJSON('https://api.github.com/orgs/lemoncode/members')
+            //promise 实例中的 resolve 执行后运行 then 方法，将 resolve 中的数据传递给 then 方法
+            .then(data => {
+                console.log(data);
+            })
+            .catch(err => {
+                console.log(err);
+            })
     </script>
 </body>
+
 </html>
